Fix: restore particle animations - raise z-index and increase count to 25

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -19,7 +19,7 @@ html {
   width: 100%;
   height: 100%;
   pointer-events: none;
-  z-index: 0;
+  z-index: 1;
   overflow: hidden;
 }
 
@@ -48,6 +48,16 @@ html {
 .css-particle:nth-child(13) { left: 50%; width: 4px; height: 4px; animation-duration: 22s; animation-delay: 4.5s; }
 .css-particle:nth-child(14) { left: 70%; width: 2px; height: 2px; animation-duration: 19s; animation-delay: 7s; }
 .css-particle:nth-child(15) { left: 88%; width: 3px; height: 3px; animation-duration: 21s; animation-delay: 5.5s; }
+.css-particle:nth-child(16) { left: 8%; width: 4px; height: 4px; animation-duration: 20s; animation-delay: 1.2s; }
+.css-particle:nth-child(17) { left: 22%; width: 3px; height: 3px; animation-duration: 24s; animation-delay: 2.8s; }
+.css-particle:nth-child(18) { left: 38%; width: 5px; height: 5px; animation-duration: 17s; animation-delay: 0.3s; }
+.css-particle:nth-child(19) { left: 48%; width: 2px; height: 2px; animation-duration: 23s; animation-delay: 4.2s; }
+.css-particle:nth-child(20) { left: 60%; width: 4px; height: 4px; animation-duration: 19s; animation-delay: 6.5s; }
+.css-particle:nth-child(21) { left: 72%; width: 3px; height: 3px; animation-duration: 25s; animation-delay: 1.8s; }
+.css-particle:nth-child(22) { left: 82%; width: 5px; height: 5px; animation-duration: 18s; animation-delay: 3.2s; }
+.css-particle:nth-child(23) { left: 95%; width: 2px; height: 2px; animation-duration: 22s; animation-delay: 5.8s; }
+.css-particle:nth-child(24) { left: 3%; width: 4px; height: 4px; animation-duration: 21s; animation-delay: 7.5s; }
+.css-particle:nth-child(25) { left: 42%; width: 3px; height: 3px; animation-duration: 20s; animation-delay: 2.2s; }
 
 @keyframes floatUp {
   0% {
